@@ -40,21 +40,21 @@ import urllib2
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-10093.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-10121.tgz',
      'xapian-core.tgz',
-     '3bfdf1a369941801c611053f34ddc35494c17759',
+     'c3a02320e95de7fd91cdf7c5347641987f39330d',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-10093.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-10121.tgz',
      'xapian-bindings.tgz',
-     '2c22cd2475842142906bbc408bdeac946da82c22',
+     'e251fbdd8340a1f8fcdf32dce9cd4c1d0f9fd035',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-10093.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-10121.tgz',
      'win32msvc.tgz',
-     '1f9e6bb763e39c324a37b6e655188f96192eca20',
+     'ecf183fe1b4f450fad1b21f84aacc6fd1bee3dff',
      'xapian-core/win32',
     ),
 )
