@@ -1,3 +1,8 @@
+Thu Feb 21 13:12:03 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py: Update to new tarballs which actually work,
+	  this time.
+
 Thu Feb 21 01:54:18 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* libs/get_xapian.py: Revert to earlier tarballs - the new ones
